Spigot implementation